<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.updateMealsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_meals"/>
        <EditText
            android:id="@+id/new_meal_count"
            android:layout_width="200sp"
            android:layout_height="50sp"
            android:hint="@string/meals_hint"
            android:gravity="center"
            android:inputType="number"/>
        <Button
            android:id="@+id/update_meals_button"
            android:layout_width="250sp"
            android:layout_height="50sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20sp"
            android:background="@drawable/rounded_button"
            android:text="@string/update_meal"
            android:textColor="@color/colorPrimary"
            />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>