<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.loginFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:text="@string/welcome"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50sp"
            android:gravity="center"
            android:text="@string/welcome_desc"
            android:textSize="15sp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="200sp"
            android:layout_height="50sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20sp"
            android:background="@drawable/rounded_button"
            android:text="@string/login"
            android:textColor="@color/colorPrimary" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>